RESOLVED FIXED82902
[Qt] Tap highlight still showing when tap gesture has timed out
https://bugs.webkit.org/show_bug.cgi?id=82902
Summary [Qt] Tap highlight still showing when tap gesture has timed out
Allan Sandfeld Jensen
Reported 2012-04-02 08:23:05 PDT
If you touch a link and hold the for a time, the tap highlight will continue to show, even though after a while a tap gesture will no longer be generated when the touch is lifted.
Attachments
Patch (1.69 KB, patch)
2012-04-02 08:26 PDT, Allan Sandfeld Jensen
no flags
Allan Sandfeld Jensen
Comment 1 2012-04-02 08:26:13 PDT
WebKit Review Bot
Comment 2 2012-04-03 05:01:26 PDT
Comment on attachment 135106 [details] Patch Clearing flags on attachment: 135106 Committed r113010: <http://trac.webkit.org/changeset/113010>
WebKit Review Bot
Comment 3 2012-04-03 05:01:30 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.