[Qt] Tap highlight still showing when tap gesture has timed out https://bugs.webkit.org/show_bug.cgi?id=82902

Patch by Allan Sandfeld Jensen <allan.jensen@nokia.com> on 2012-04-03
Reviewed by Kenneth Rohde Christiansen.

Disable highlight of potential tap, when tap-and-hold state
replaces potential tap state.

* UIProcess/qt/QtTapGestureRecognizer.cpp:
(WebKit::QtTapGestureRecognizer::tapAndHoldTimeout):

Canonical link: https://commits.webkit.org/100367@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113010 268f45cc-cd09-0410-ab3c-d52691b4dbfc