Source/WebKit2/UIProcess/qt/QtTapGestureRecognizer.cpp
@@ -131,6 +131,7 @@ void QtTapGestureRecognizer::tapAndHoldTimeout()
 {
     ASSERT(m_touchBeginEventForTap);
     m_tapAndHoldTimer.stop();
+    m_eventHandler->handlePotentialSingleTapEvent(QTouchEvent::TouchPoint());
 #if 0 // No support for synthetic context menus in WK2 yet.
     QTouchEvent::TouchPoint tapPoint = m_touchBeginEventForTap->touchPoints().at(0);
     WebGestureEvent gesture(WebEvent::GestureTapAndHold, tapPoint.pos().toPoint(), tapPoint.screenPos().toPoint(), WebEvent::Modifiers(0), 0);
